사진 안뜨는거거거거

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -192,7 +192,7 @@
   margin-top: 10px;
 }
 
-/* Add this to your CSS modulee (page.module.css) */
+/* Add this to your CSS moduleee (page.module.css) */
 .bottomSpace {
   height: 200px;
 }
