이미지 안뜸

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -227,7 +227,7 @@
   margin-left: 10px;
   margin-bottom: 5px; /* 간격을 줄이기 위해 margin-bottom 값을 5px로 조정 */
   position: relative;
-  line-height: 2; /* 줄 간격 추가 */
+  line-height: 2; /* 줄 간격 추추가 */
 }
 
 
